--- a/app/src/main/res/layout/item_daily_record.xml
+++ b/app/src/main/res/layout/item_daily_record.xml
@@ -26,7 +26,7 @@
             android:layout_height="wrap_content"
             android:layout_marginVertical="20dp"
             android:layout_marginStart="16dp"
-            android:text="@{@string/workbook_daily_date_format(dailyWorkInfo.date, dailyWorkInfo.day)}"
+            android:text="@{@string/workbook_daily_date_format(dailyWorkInfo.date, dailyWorkInfo.dayOfWeek)}"
             android:textAppearance="@style/TextAppearance.Subtitle2"
             android:textColor="@color/gray_07"
             app:layout_constraintBottom_toBottomOf="parent"
