[mod] 홈뷰 목표 수입 수정

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -266,7 +266,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="2dp"
-                android:text="@{viewModel.totalIncomeString}"
+                android:text="@{viewModel.goalIncome}"
                 android:textAppearance="@style/TextAppearance.Caption3"
                 android:textColor="@color/coolgray_05"
                 app:layout_constraintEnd_toEndOf="@id/pb_home"
