[feat] 이미지 추가

--- a/app/src/main/res/layout/activity_auth_setting_finish.xml
+++ b/app/src/main/res/layout/activity_auth_setting_finish.xml
@@ -6,6 +6,16 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <ImageView
+            android:id="@+id/iv_congratulation"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:src="@drawable/img_congratulation"
+            app:layout_constraintBottom_toTopOf="@+id/tv_auth_finished_title"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
         <TextView
             android:id="@+id/tv_auth_finished_title"
             android:layout_width="wrap_content"
