--- a/app/src/main/res/layout/fragment_my_page.xml
+++ b/app/src/main/res/layout/fragment_my_page.xml
@@ -378,6 +378,18 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
+                android:id="@+id/tv_version_info"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:text="1.0.0"
+                android:textAppearance="@style/TextAppearance.Body2_Medium"
+                android:textColor="@color/gray_05"
+                app:layout_constraintBottom_toBottomOf="@+id/tv_version"
+                app:layout_constraintStart_toEndOf="@+id/tv_version"
+                app:layout_constraintTop_toTopOf="@+id/tv_version" />
+
+            <TextView
                 android:id="@+id/tv_update"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -388,6 +400,7 @@
                 android:text="@string/mypage_update"
                 android:textAppearance="@style/TextAppearance.Subtitle3"
                 android:textColor="@color/white"
+                android:visibility="invisible"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
