--- a/app/src/main/res/layout/fragment_workbook.xml
+++ b/app/src/main/res/layout/fragment_workbook.xml
@@ -372,6 +372,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginEnd="20dp"
                             android:src="@drawable/ic_arrow_right_blue"
+                            android:visibility="invisible"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintTop_toTopOf="parent" />
