--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -214,19 +214,6 @@
                 app:layout_constraintStart_toEndOf="@+id/tv_income"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <com.airbnb.lottie.LottieAnimationView
-                android:id="@+id/lottie_home_graph"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="20dp"
-                android:layout_marginTop="16dp"
-                android:visibility="@{viewModel.totalIncome == 0 ? View.VISIBLE : View.INVISIBLE}"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tv_month_income"
-                app:lottie_autoPlay="true"
-                app:lottie_loop="true"
-                app:lottie_rawRes="@raw/home_graph" />
 
             <TextView
                 android:id="@+id/tv_bubble_amount"
@@ -240,7 +227,6 @@
                 android:textColor="@color/white"
                 app:layout_constraintStart_toStartOf="@+id/pb_home"
                 app:layout_constraintTop_toBottomOf="@+id/tv_month_income"
-                app:visibility="@{viewModel.totalIncome > 0}"
                 tools:text="70%" />
 
 
@@ -252,8 +238,7 @@
                 android:layout_marginBottom="4dp"
                 android:src="@drawable/ic_triangle_down"
                 app:layout_constraintBottom_toTopOf="@+id/pb_home"
-                app:layout_constraintStart_toStartOf="@+id/pb_home"
-                app:visibility="@{viewModel.totalIncome > 0}" />
+                app:layout_constraintStart_toStartOf="@+id/pb_home" />
 
             <ProgressBar
                 android:id="@+id/pb_home"
@@ -268,7 +253,6 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tv_bubble_amount"
-                app:visibility="@{viewModel.totalIncome > 0}"
                 tools:progress="20" />
 
             <TextView
@@ -280,18 +264,18 @@
                 android:textAppearance="@style/TextAppearance.Caption3"
                 android:textColor="@color/coolgray_05"
                 app:layout_constraintEnd_toEndOf="@id/pb_home"
-                app:layout_constraintTop_toBottomOf="@id/pb_home"
-                app:visibility="@{viewModel.totalIncome > 0}" />
+                app:layout_constraintTop_toBottomOf="@id/pb_home" />
 
             <View
                 android:id="@+id/view_divider"
                 android:layout_width="0dp"
                 android:layout_height="1dp"
                 android:layout_marginHorizontal="20dp"
+                android:layout_marginTop="20dp"
                 android:background="@color/gray_04"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/lottie_home_graph" />
+                app:layout_constraintTop_toBottomOf="@+id/tv_goal_income" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="wrap_content"
