[feat] 자랑하기 뷰 api 연결

--- a/app/src/main/res/layout/activity_work_card.xml
+++ b/app/src/main/res/layout/activity_work_card.xml
@@ -74,7 +74,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="20dp"
-                android:text="@string/work_card_job"
+                android:text="@{@string/work_card_job(viewModel.cardData.job)}"
                 android:textAppearance="@style/TextAppearance.Subtitle2"
                 android:textColor="@color/white"
                 app:layout_constraintStart_toStartOf="parent"
@@ -85,7 +85,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
-                android:text="@string/work_card_percentage"
+                android:text="@{viewModel.rank}"
                 android:textAppearance="@style/TextAppearance.H4_Bold"
                 android:textColor="@color/white"
                 app:layout_constraintStart_toStartOf="parent"
@@ -97,6 +97,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:layout_marginEnd="20dp"
+                android:text="@{viewModel.cardData.workAt}"
                 android:textAppearance="@style/TextAppearance.Subtitle2"
                 android:textColor="@color/primary_background"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -156,7 +157,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="6dp"
-                    android:text="@string/work_card_income"
+                    android:text="@{@string/work_card_income(viewModel.income)}"
                     android:textAppearance="@style/TextAppearance.H6_Bold"
                     android:textColor="@color/white"
                     app:layout_constraintBottom_toBottomOf="@+id/tv_income_tag"
@@ -169,7 +170,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="20dp"
-                    android:text="@string/work_card_worked_day"
+                    android:text="@{@string/work_card_worked_day(viewModel.cardData.cases)}"
                     android:textAppearance="@style/TextAppearance.Subtitle1"
                     android:textColor="@color/white"
                     app:layout_constraintBottom_toBottomOf="parent"
