--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -278,6 +278,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/tv_goal_income" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/layout_move_to_detail"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
