--- a/app/src/main/res/layout/item_daily_record.xml
+++ b/app/src/main/res/layout/item_daily_record.xml
@@ -62,7 +62,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="6dp"
-            android:text="@{dailyWorkInfo.income == null ? @string/workbook_daily_refresh : @string/workbook_daily_income_format(income, dailyWorkInfo.numberOfCases)}"
+            android:text="@{(dailyWorkInfo.income == null || dailyWorkInfo.income == 0) ? @string/workbook_daily_refresh : @string/workbook_daily_income_format(income, dailyWorkInfo.numberOfCases)}"
             android:textAppearance="@style/TextAppearance.Subtitle2"
             android:textColor="@{dailyWorkInfo.income == null ? @color/gray_05 : @color/gray_10}"
             app:layout_constraintBottom_toBottomOf="@+id/tv_date"
