--- a/app/src/main/res/layout/activity_profile_setting.xml
+++ b/app/src/main/res/layout/activity_profile_setting.xml
@@ -49,9 +49,10 @@
                 android:id="@+id/tv_save"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:clickable="@{viewModel.isSaveAvailable}"
                 android:text="@string/save"
                 android:textAppearance="@style/TextAppearance.Subtitle1"
-                android:textColor="@color/gray_05"
+                android:textColor="@{viewModel.isSaveAvailable ? @color/primary_normal : @color/gray_05}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -74,6 +75,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_camera"
+            android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="@+id/iv_profile"
             app:layout_constraintEnd_toEndOf="@+id/iv_profile" />
 
@@ -129,15 +131,28 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="12dp"
             android:background="@drawable/shape_border_radius_4"
+            android:enabled="@{viewModel.nickname != null  &amp; viewModel.isNicknameAvailable != true &amp; viewModel.isNicknameCorrect}"
             android:paddingHorizontal="12dp"
             android:paddingVertical="6dp"
             android:text="@string/check_duplication"
             android:textAppearance="@style/TextAppearance.Subtitle3"
             android:textColor="@color/white"
-            app:backgroundTint="@color/gray_04"
+            app:backgroundTint="@drawable/selector_btn_radius_4"
             app:layout_constraintBottom_toBottomOf="@id/et_nickname"
             app:layout_constraintEnd_toEndOf="@+id/et_nickname"
             app:layout_constraintTop_toTopOf="@+id/et_nickname" />
+
+        <TextView
+            android:id="@+id/tv_nickname_guide"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="2dp"
+            android:layout_marginEnd="8dp"
+            android:text="@{context.getString(viewModel.nicknameInputGuide.strRes)}"
+            android:textAppearance="@style/TextAppearance.Caption1"
+            android:textColor="@{context.getColor(viewModel.nicknameInputGuide.colorRes)}"
+            app:layout_constraintEnd_toEndOf="@id/et_nickname"
+            app:layout_constraintTop_toBottomOf="@id/et_nickname" />
 
 
         <TextView
@@ -245,6 +260,19 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_income_goal_title" />
+
+        <TextView
+            android:id="@+id/tv_goal_setting_guide"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="2dp"
+            android:layout_marginEnd="8dp"
+            android:text="@{viewModel.incomeGoalValid >= 100000 &amp; viewModel.incomeGoalValid &lt;= 99999999 ? @string/goal_setting_correct : @string/goal_setting_wrong}"
+            android:textAppearance="@style/TextAppearance.Caption1"
+            android:textColor="@{viewModel.incomeGoalValid >= 100000 &amp; viewModel.incomeGoalValid &lt;= 99999999 ? @color/primary_normal : @color/red}"
+            app:layout_constraintEnd_toEndOf="@+id/et_goal_setting"
+            app:layout_constraintTop_toBottomOf="@+id/et_goal_setting"
+            tools:text="@string/goal_setting_wrong" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="wrap_content"
