--- a/app/src/main/res/layout/fragment_goal_setting.xml
+++ b/app/src/main/res/layout/fragment_goal_setting.xml
@@ -75,9 +75,9 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:layout_marginTop="2dp"
-            android:text="@{viewModel.incomeGoalValid >= 100000 ? @string/goal_setting_correct : @string/goal_setting_wrong}"
+            android:text="@{viewModel.incomeGoalValid >= 100000 &amp; viewModel.incomeGoalValid &lt;= 99999999 ? @string/goal_setting_correct : @string/goal_setting_wrong}"
             android:textAppearance="@style/TextAppearance.Caption1"
-            android:textColor="@{viewModel.incomeGoalValid >= 100000 ? @color/primary_normal : @color/red}"
+            android:textColor="@{viewModel.incomeGoalValid >= 100000 &amp; viewModel.incomeGoalValid &lt;= 99999999 ? @color/primary_normal : @color/red}"
             app:layout_constraintEnd_toEndOf="@+id/et_goal_setting"
             app:layout_constraintTop_toBottomOf="@+id/et_goal_setting"
             tools:text="@string/goal_setting_wrong" />
