[chore] 패키지 수정, 불필요한 코드 삭제

--- a/app/src/main/res/layout/dialog_work_type_selecting.xml
+++ b/app/src/main/res/layout/dialog_work_type_selecting.xml
@@ -9,7 +9,7 @@
 
         <variable
             name="viewModel"
-            type="org.blueclub.presentation.daily.DailyWorkDetailViewModel" />
+            type="org.blueclub.presentation.daily.caddie.WorkDetailCaddieViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
