--- a/app/src/main/res/layout/activity_daily_work_detail.xml
+++ b/app/src/main/res/layout/activity_daily_work_detail.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="viewModel"
-            type="org.blueclub.presentation.daily.DailyWorkDetailViewModel" />
+            type="org.blueclub.presentation.daily.caddie.WorkDetailCaddieViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
