[feat] 디테일뷰 총 수입 계산 로직 구현

--- a/app/src/main/res/layout/activity_work_detail_day_labor.xml
+++ b/app/src/main/res/layout/activity_work_detail_day_labor.xml
@@ -545,7 +545,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="16dp"
-                        android:text="@string/calculating_yet"
+                        android:text="@{viewModel.income}"
                         android:textColor="@color/primary_normal"
                         app:layout_constraintBottom_toBottomOf="@+id/tv_total_income_title"
                         app:layout_constraintEnd_toEndOf="parent"
