[feat] 근무작성 뷰 메모 기능 구현

--- a/app/src/main/res/layout/activity_work_detail_caddie.xml
+++ b/app/src/main/res/layout/activity_work_detail_caddie.xml
@@ -427,6 +427,56 @@
 
 
                 <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/layout_memo"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="20dp"
+                    android:layout_marginTop="16dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/layout_baeto"
+                    app:visibility="@{!viewModel.memo.blank}">
+
+                    <ImageView
+                        android:id="@+id/iv_memo"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_memo"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="4dp"
+                        android:text="@string/memo"
+                        android:textAppearance="@style/TextAppearance.Body1_Medium"
+                        android:textColor="@color/coolgray_06"
+                        app:layout_constraintBottom_toBottomOf="@+id/iv_memo"
+                        app:layout_constraintStart_toEndOf="@+id/iv_memo"
+                        app:layout_constraintTop_toTopOf="@+id/iv_memo" />
+
+                    <TextView
+                        android:id="@+id/tv_memo"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="16dp"
+                        android:background="@drawable/background_memo"
+                        android:ellipsize="end"
+                        android:maxLines="1"
+                        android:paddingHorizontal="16dp"
+                        android:paddingVertical="16dp"
+                        android:text="@{viewModel.memo}"
+                        android:textAppearance="@style/TextAppearance.Body1_Medium"
+                        android:textColor="@color/gray_10"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/iv_memo" />
+
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+                <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/layout_add_memo"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -436,9 +486,9 @@
                     android:backgroundTint="@color/coolgray_01"
                     android:paddingHorizontal="8dp"
                     android:paddingVertical="6dp"
-                    android:visibility="invisible"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/layout_baeto">
+                    app:layout_constraintTop_toBottomOf="@+id/layout_memo"
+                    app:visibility="@{viewModel.memo.blank}">
 
                     <ImageView
                         android:id="@+id/iv_plus_memo"
