--- a/app/src/main/res/layout/activity_work_detail_day_labor.xml
+++ b/app/src/main/res/layout/activity_work_detail_day_labor.xml
@@ -686,6 +686,7 @@
                     android:layout_marginHorizontal="20dp"
                     android:layout_marginTop="30dp"
                     android:layout_marginBottom="20dp"
+                    android:backgroundTint="@{viewModel.isInputCompleted ? @color/coolgray_10 : @color/gray_04}"
                     android:enabled="@{viewModel.isInputCompleted}"
                     android:paddingVertical="17dp"
                     android:text="@string/show_my_income"
