--- a/app/src/main/res/layout/fragment_workbook.xml
+++ b/app/src/main/res/layout/fragment_workbook.xml
@@ -13,11 +13,12 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#F8F9FC"
+        android:background="@color/white"
         tools:context=".presentation.workbook.WorkbookFragment">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/layout_title_bar"
+            android:background="#F8F9FC"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
@@ -341,41 +342,19 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/layout_daily_record_title" />
 
-                    <androidx.constraintlayout.widget.ConstraintLayout
-                        android:id="@+id/layout_empty_record"
-                        android:layout_width="0dp"
+                    <TextView
+                        android:id="@+id/tv_empty_record"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="20dp"
-                        android:layout_marginTop="10dp"
-                        android:background="@drawable/background_job_selected"
+                        android:layout_marginTop="20dp"
+                        android:text="@string/workbook_no_record"
+                        android:textAppearance="@style/TextAppearance.Subtitle2"
+                        android:textColor="@color/gray_05"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/layout_daily_record_title"
-                        app:visibility="@{viewModel.totalRecordDay == 0}">
-
-                        <TextView
-                            android:id="@+id/tv_first_record"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginVertical="20dp"
-                            android:layout_marginStart="20dp"
-                            android:text="@{@string/workbook_first_record(viewModel.yearMonth.month.value)}"
-                            android:textAppearance="@style/TextAppearance.Subtitle2"
-                            android:textColor="@color/primary_normal"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent" />
-
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginEnd="20dp"
-                            android:src="@drawable/ic_arrow_right_blue"
-                            android:visibility="invisible"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintTop_toTopOf="parent" />
-                    </androidx.constraintlayout.widget.ConstraintLayout>
+                        app:visibility="@{viewModel.totalRecordDay == 0}"
+                        tools:text="@string/workbook_no_record" />
 
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
