--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -9,7 +9,11 @@
         android:id="@+id/homeFragment"
         android:name="org.blueclub.presentation.home.HomeFragment"
         android:label="HomeFragment"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home" >
+        <action
+            android:id="@+id/action_home_to_workbook"
+            app:destination="@id/workbookFragment" />
+    </fragment>
 
     <fragment
         android:id="@+id/workbookFragment"
