[mod] 캘린더 날짜 터치영역, margin 수정

--- a/app/src/main/res/layout/layout_calendar_day_title.xml
+++ b/app/src/main/res/layout/layout_calendar_day_title.xml
@@ -4,5 +4,6 @@
     android:layout_height="wrap_content"
     android:layout_weight="1"
     android:gravity="center"
+    android:paddingBottom="6dp"
     android:textAppearance="@style/TextAppearance.Caption1"
     android:textColor="@color/gray_08" />
