--- a/app/src/main/res/drawable/ic_today_coin.xml
+++ b/app/src/main/res/drawable/ic_today_coin.xml
@@ -4,8 +4,6 @@
     android:viewportWidth="36"
     android:viewportHeight="36">
   <path
-      android:pathData="M18,18m-17.526,0a17.526,17.526 0,1 1,35.053 0a17.526,17.526 0,1 1,-35.053 0"
-      android:strokeWidth="0.947368"
-      android:fillColor="#ffffff"
-      android:strokeColor="#2D75FF"/>
+      android:pathData="M18,18m-18,0a18,18 0,1 1,36 0a18,18 0,1 1,-36 0"
+      android:fillColor="#ffffff"/>
 </vector>
