--- a/app/src/main/res/layout/fragment_workbook.xml
+++ b/app/src/main/res/layout/fragment_workbook.xml
@@ -246,7 +246,7 @@
                         android:id="@+id/tv_calendar_month_info"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="24dp"
+                        android:layout_marginTop="30dp"
                         android:text="@{@string/calendar_month_info(viewModel.yearMonth.year, viewModel.yearMonth.month.value)}"
                         android:textAppearance="@style/TextAppearance.Subtitle2"
                         android:textColor="@color/gray_08"
@@ -259,6 +259,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="12dp"
+                        android:paddingHorizontal="4dp"
+                        android:paddingVertical="4dp"
                         android:src="@drawable/ic_triangle_left"
                         app:layout_constraintBottom_toBottomOf="@+id/tv_calendar_month_info"
                         app:layout_constraintEnd_toStartOf="@+id/tv_calendar_month_info"
@@ -269,6 +271,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="12dp"
+                        android:paddingHorizontal="4dp"
+                        android:paddingVertical="4dp"
                         android:src="@drawable/ic_triangle_right"
                         app:layout_constraintBottom_toBottomOf="@+id/tv_calendar_month_info"
                         app:layout_constraintStart_toEndOf="@+id/tv_calendar_month_info"
@@ -279,7 +283,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginHorizontal="25dp"
-                        android:layout_marginTop="20dp"
+                        android:layout_marginTop="30dp"
                         android:nestedScrollingEnabled="false"
                         app:cv_daySize="seventhWidth"
                         app:cv_dayViewResource="@layout/layout_calendar_day"
