--- a/app/src/main/res/layout/fragment_my_page.xml
+++ b/app/src/main/res/layout/fragment_my_page.xml
@@ -57,7 +57,7 @@
             android:layout_marginTop="14dp"
             android:background="@drawable/background_workbook_goal"
             android:paddingHorizontal="20dp"
-            android:paddingVertical="20dp"
+            android:paddingTop="20dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/layout_title_bar">
@@ -129,11 +129,12 @@
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/layout_friend_invitation"
-                android:layout_width="70dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                app:layout_constraintEnd_toStartOf="@+id/layout_inquiry"
-                app:layout_constraintStart_toStartOf="parent"
+                android:paddingHorizontal="20dp"
+                android:paddingTop="16dp"
+                android:paddingBottom="20dp"
+                app:layout_constraintStart_toStartOf="@+id/view_divider"
                 app:layout_constraintTop_toBottomOf="@+id/view_divider">
 
                 <ImageView
@@ -162,11 +163,13 @@
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/layout_inquiry"
-                android:layout_width="70dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                app:layout_constraintEnd_toEndOf="@+id/layout_service_comment"
-                app:layout_constraintStart_toEndOf="@+id/layout_friend_invitation"
+                android:paddingHorizontal="20dp"
+                android:paddingTop="16dp"
+                android:paddingBottom="20dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/view_divider">
 
                 <ImageView
@@ -195,11 +198,12 @@
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/layout_service_comment"
-                android:layout_width="70dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/layout_inquiry"
+                android:paddingHorizontal="7dp"
+                android:paddingTop="16dp"
+                android:paddingBottom="20dp"
+                app:layout_constraintEnd_toEndOf="@+id/view_divider"
                 app:layout_constraintTop_toBottomOf="@+id/view_divider">
 
                 <ImageView
