--- a/app/src/main/res/layout/activity_profile_setting.xml
+++ b/app/src/main/res/layout/activity_profile_setting.xml
@@ -267,12 +267,12 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="2dp"
             android:layout_marginEnd="8dp"
-            android:text="@{viewModel.incomeGoalValid >= 100000 &amp; viewModel.incomeGoalValid &lt;= 99999999 ? @string/goal_setting_correct : @string/goal_setting_wrong}"
+            android:text="@{viewModel.goalErrorMsg.strRes}"
             android:textAppearance="@style/TextAppearance.Caption1"
-            android:textColor="@{viewModel.incomeGoalValid >= 100000 &amp; viewModel.incomeGoalValid &lt;= 99999999 ? @color/primary_normal : @color/red}"
+            android:textColor="@{context.getColor(viewModel.goalErrorMsg.colorRes)}"
             app:layout_constraintEnd_toEndOf="@+id/et_goal_setting"
             app:layout_constraintTop_toBottomOf="@+id/et_goal_setting"
-            tools:text="@string/goal_setting_wrong" />
+            tools:text="@string/goal_setting_too_low" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="wrap_content"
