--- a/app/src/main/res/layout/dialog_goal_setting.xml
+++ b/app/src/main/res/layout/dialog_goal_setting.xml
@@ -75,12 +75,12 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="2dp"
-            android:text="@{viewModel.incomeGoalValid >= 100000 ? @string/goal_setting_correct : @string/goal_setting_wrong}"
+            android:text="@{viewModel.goalErrorMsg.strRes}"
             android:textAppearance="@style/TextAppearance.Caption1"
-            android:textColor="@{viewModel.incomeGoalValid >= 100000 ? @color/primary_normal : @color/red}"
+            android:textColor="@{context.getColor(viewModel.goalErrorMsg.colorRes)}"
             app:layout_constraintEnd_toEndOf="@+id/et_goal_setting"
             app:layout_constraintTop_toBottomOf="@+id/et_goal_setting"
-            tools:text="@string/goal_setting_wrong" />
+            tools:text="@string/goal_setting_too_low" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_goal_setting_finished"
